--- a/pom.xml
+++ b/pom.xml
@@ -5,21 +5,18 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.1.RELEASE</version>
+        <version>2.0.4.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.wuwei.cloud</groupId>
-    <artifactId>config</artifactId>
+    <groupId>com.wuwei</groupId>
+    <artifactId>springcloud-docker-config</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>config</name>
+    <name>springcloud-docker-config</name>
     <description>配置中心</description>
 
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <skipTests>true</skipTests>
-        <spring-cloud.version>Finchley.SR1</spring-cloud.version>
+        <spring-cloud.version>Finchley.RELEASE</spring-cloud.version>
     </properties>
 
     <dependencies>
@@ -83,8 +80,8 @@
     </dependencyManagement>
 
     <build>
+        <finalName>springcloud-docker-config</finalName>
         <plugins>
-
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
