--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,4 +21,4 @@ spring:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://172.16.246.128:8761/eureka,http://172.16.246.128:8762/eureka,http://172.16.246.128:8763/eureka
+      defaultZone: http://172.16.246.128:8761/eureka,http://172.16.246.128:8762/eureka
