Revert "no message"
This reverts commit d2b6376b

--- a/pom.xml
+++ b/pom.xml
@@ -92,5 +92,15 @@
         </plugins>
     </build>
 
+    <distributionManagement>
+        <snapshotRepository>
+            <id>nexus-snapshots</id>
+            <url>http://172.16.246.128:8081/repository/maven-snapshots/</url>
+        </snapshotRepository>
+        <repository>
+            <id>nexus-releases</id>
+            <url>http://172.16.246.128:8081/repository/maven-releases/</url>
+        </repository>
+    </distributionManagement>
 
 </project>
