--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,14 +11,16 @@ spring:
       label: master
       server:
         git:
-          # git地址
-          uri: https://github.com/uywojh/springcloud_profile.git
-          # 远程目录
-          search-paths: cloud
-          username: 664507439@qq.com
-          password: wu15180180820
+#          # git地址
+#          uri: https://github.com/uywojh/springcloud_profile.git
+#          # 远程目录
+#          search-paths: cloud
+#          username: 664507439@qq.com
+#          password: wu15180180820
 
 eureka:
+  instance:
+    prefer-ip-address: true
   client:
     serviceUrl:
       defaultZone: http://172.16.246.128:8761/eureka,http://172.16.246.128:8762/eureka
